--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.data.mongodb.host=127.0.0.1
-spring.data.mongodb.port=27017
+# spring.data.mongodb.host=127.0.0.1
+# spring.data.mongodb.port=27017
 #spring.data.mongodb.username=myjournaluser
 #spring.data.mongodb.password=mypassword
+spring.data.mongodb.uri=mongodb+srv://khushiagnihotri16:Z8yZCDEZ4W2tFLdB@cluster0.vpifjag.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 spring.data.mongodb.database=journaldb
 spring.data.mongodb.auto-index-creation=true
