--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,10 @@
             <artifactId>spring-boot-starter-logging</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
