--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,3 @@
 spring:
-  data:
-    mongodb:
-      uri: mongodb+srv://khushiagnihotri16:Z8yZCDEZ4W2tFLdB@cluster0.vpifjag.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-      database: journaldb
-      auto-index-creation: true
-server:
-  port: 8081
-  servlet: 
-    context-path: /journal
+  profiles:
+    active: prod
