--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -8,3 +8,6 @@ server:
   port: 8081
   servlet:
     context-path: /dev-journal
+logging:
+  level:
+    net.engineeringdigest.journalApp.service.JournalEntryService: trace
