--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -7,8 +7,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: email@gmail.com
-    password: 
+    username: rajeevranjan.mcdonald@gmail.com
+    password: wazm enlh ndos bxhq
     properties:
       mail:
         smtp:
